--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 # Telegram
 BOT_TOKEN="telegram_bot_token"
 
-# Redis
-REDIS_HOST=localhost
+# Redis (можно не менять)
+REDIS_HOST=redis
 REDIS_PORT=6379
-REDIS_DB=0
